--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^1.1.1",
+    "axios": "^0.26.0",
     "core-js": "^3.6.5",
+    "element-plus": "^2.0.5",
+    "v-clipboard3": "^0.1.4",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
