--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "v-clipboard3": "^0.1.4",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
+    "vue-video-player": "^5.0.2",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
